test/error/type/err1.rzy
Weekday = Enum
  Monday;
  Tuesday;
  Wednesday;
  Thursday;
  Friday;
  Saturday;
  Sunday;
end

Err1 = Elementary
  foo : slot( x: Weekday )
    z : R{0,10} = x;
  end
end

